--- a/project-board-practice-spring/src/main/resources/templates/articles/detail.html
+++ b/project-board-practice-spring/src/main/resources/templates/articles/detail.html
@@ -3,23 +3,38 @@
 <head>
   <meta charset="UTF-8">
   <title>게시글 페이지</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="jiwon kim">
+  <title>게시글 페이지</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link href="/css/articles/article-content.css" rel="stylesheet"
 </head>
 
 <body>
 
-  <header id="header :: header"></header>
+  <header id="header"></header>
 
-  <main>
-    <header>
+  <main class="container">
+    <header class="py-5 text-center">
       <h1>첫번째 글</h1>
     </header>
 
-    <aside>
-      <p>G1</p>
-      <p><a href="kimjw0704@naver.com">G1@mail.com</a></p>
-      <p><time datetime="2023-01-01T00:00:00">2023-01-01</time></p>
-      <p>#java</p>
-    </aside>
+    <div class="row g-5">
+      <section class="col-md-5 col-lg-4 order-md-last">
+        <aside>
+          <p><span class="nick-name">G1</span></p>
+          <p><a class="u-url" rel="me" href="kimjw0704@naver.com">G1@gmail.com</a></p>
+          <p><time datetime="2023-01-01T00:00:00">2023-01-01</time></p>
+          <p>#java</p>
+        </aside>
+      </section>
+
+      <article class="col-md-7 col-lg-8">
+        <p>본문<br><br></p>
+      </article>
+    </div>
 
     <section>
       <form class="row g-3 comment-form">
@@ -40,7 +55,7 @@
             <input type="hidden" class="article-id">
             <div class="row">
               <div class="col-md-10 col-lg-9">
-                <strong>Uno</strong>
+                <strong>Jiwon</strong>
                 <small><time>2022-01-01</time></small>
                 <p class="mb-1">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
@@ -59,7 +74,7 @@
                 <input type="hidden" class="article-id">
                 <div class="row">
                   <div class="col-md-10 col-lg-9">
-                    <strong>Uno</strong>
+                    <strong>Jiwon</strong>
                     <small><time>2022-01-01</time></small>
                     <p class="mb-1">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
@@ -87,10 +102,17 @@
           </div>
         </li>
       </ul>
+
+      <nav>
+        <a href="#">이전 글</a>
+        <a href="#">다음 글</a>
+      </nav>
     </section>
   </main>
 
-  <footer id="footer :: footer"></footer>
-
+  <footer id="footer"></footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+          crossorigin="anonymous"></script>
 </body>
 </html>
